<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context=".ui.authorization.AuthorizationFragment">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_gravity="center"
        android:layout_marginTop="52dp"
        android:src="@drawable/logo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_enter_via_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="92dp"
        android:backgroundTint="@color/button_color"
        android:drawableLeft="@drawable/ic_google"
        android:fontFamily="@font/montserrat_regular"
        android:padding="20dp"
        android:text="@string/enter_via_google"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="20dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_continue_with_apple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/button_color"
        android:drawableLeft="@drawable/ic_apple"
        android:fontFamily="@font/montserrat_regular"
        android:padding="20dp"
        android:text="@string/continue_with_apple"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="20dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_continue_with_vk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/button_color"
        android:drawableLeft="@drawable/ic_vk"
        android:fontFamily="@font/montserrat_regular"
        android:padding="20dp"
        android:text="@string/continue_with_vk"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="20dp" />

</LinearLayout>